--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
-123
+    <header class="header">
+      <div class="logo logo_place_header"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a href="#" class="header__link">Узнать &#8594</a>
+      </p>
+      <img src="./images/header-image.png" alt="Иллюстрация" class="header__main-illustration">
+      <div class="header__square-pic"></div>
+    </header>
+
+    <section>
+      <div class="description">
+        <div class="two-columns">
+          <div class="brief">
+
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 </body>
 </html>
