--- a/index.html
+++ b/index.html
@@ -22,8 +22,57 @@
     <section>
       <div class="description">
         <div class="two-columns">
-          <div class="brief">
-
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+              <div class="two-columns__paragraph">
+                Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+              </div>
+              <div class="two-columns__paragraph">
+                <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+              </div>
+              <div class="two-columns__paragraph">
+                Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+              </div>
+          </div>
+        </div>
+      </div>
+      <div class="digits">
+        <h1 class="section-title section-title_margin_100">Цифры и факты</h1>
+        <h2 class="section-subtitle section-subtitle_margin_20">Про учёбу и мозг</h2>
+        <div class="table table_theme_white">
+          <div class="table__cell table__cell_theme_white">
+            <div class="table__heading">86 миллиардов</div>
+            <div class="table__text table__text_theme_white">Число нейронов в мозге человека</div>
+          </div>
+          <div class="table__cell table__cell_theme_white">
+            <div class="table__heading">2.1 миллиарда</div>
+            <div class="table__text table__text_theme_white">Число нуждающихся в повышении квалификации</div>
+            <div class="table__text table__text_theme_white">Всемирный Банк, 2017</div>
+          </div>
+          <div class="table__cell table__cell_theme_white">
+            <div class="table__heading">1000 терабайт</div>
+            <div class="table__text table__text_theme_white">Объём памяти человека</div>
+          </div>
+          <div class="table__cell table__cell_theme_white">
+            <div class="table__heading">500 триллионов</div>
+            <div class="table__text table__text_theme_white">Число ответственных за обучение нервных синапсов у взрослого человека</div>
+          </div>
+          <div class="table__cell table__cell_theme_white">
+            <div class="table__heading">420 миллионов</div>
+            <div class="table__text table__text_theme_white">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</div>
+            <div class="table__text table__text_theme_white">Всемирный Банк, 2017</div>
+          </div>
+          <div class="table__cell table__cell_theme_white">
+            <div class="table__heading">17–20 лет</div>
+            <div class="table__text table__text_theme_white">Пик обучаемости</div>
+          </div>
+          <div class="table__cell table__cell_theme_white">
+            <div class="table__heading">1885 год</div>
+            <div class="table__text table__text_theme_white">Открытие кривой забывания</div>
+          </div>
+          <div class="table__cell table__cell_theme_white">
+            <div class="table__heading">1889 год</div>
+            <div class="table__text table__text_theme_white">Открытие условного рефлекса</div>
           </div>
         </div>
       </div>
