--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать &#8594</a>
+        <a href="#" class="header__link">Узнать &#8594;</a>
       </p>
-      <img src="./images/header-image.png" alt="Иллюстрация" class="header__main-illustration">
+      <img src="./images/header-image.png" alt="грустный мальчик с собакой" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
 
-    <section>
-      <div class="description">
+    <main>
+      <section class="description">
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
@@ -35,48 +35,133 @@
               </div>
           </div>
         </div>
-      </div>
-      <div class="digits">
-        <h1 class="section-title section-title_margin_100">Цифры и факты</h1>
-        <h2 class="section-subtitle section-subtitle_margin_20">Про учёбу и мозг</h2>
-        <div class="table table_theme_white">
-          <div class="table__cell table__cell_theme_white">
-            <div class="table__heading">86 миллиардов</div>
-            <div class="table__text table__text_theme_white">Число нейронов в мозге человека</div>
+      </section>
+      <section class="digits">
+        <h2 class="section-title section-title_margin_100">Цифры и факты</h2>
+        <h3 class="section-subtitle section-subtitle_margin_20">Про учёбу и мозг</h3>
+        <ul class="table table_margin_100">
+          <li class="table__cell">
+            <h4 class="table__heading">86 миллиардов</h4>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">2.1 миллиарда</h4>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1000 терабайт</h4>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">500 триллионов</h4>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">420 миллионов</h4>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">17–20 лет</h4>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1885 год</h4>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1889 год</h4>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не зыбыть.</h3>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+      </section>
+      <section class="kaufman">
+        <h2 class="section-title section-title_theme_dark section-title_margin_90">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark section-subtitle_margin_20">от Джоша Кауфмана</h3>
+        <ul class="table table_theme_dark table_margin_90">
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">1</h4>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">2</h4>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">3</h4>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">4</h4>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">5</h4>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">6</h4>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">7</h4>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">8</h4>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">9</h4>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">10</h4>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
+        <div class="triangle"></div>
+      </section>
+    </main>
+
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__column footer__column_content_copyright">
+            <div class="logo logo_place_footer"></div>
+            <p class="footer__author"> &copy; Михаил Шембек</p>
           </div>
-          <div class="table__cell table__cell_theme_white">
-            <div class="table__heading">2.1 миллиарда</div>
-            <div class="table__text table__text_theme_white">Число нуждающихся в повышении квалификации</div>
-            <div class="table__text table__text_theme_white">Всемирный Банк, 2017</div>
+          <nav class="footer__column footer__column_content_info">
+            <h4 class="footer__column-heading">О Практикуме</h4>
+            <ul class="footer__column-links">
+              <li><a href="#" class="footer__column-link">Главная</a></li>
+              <li><a href="#" class="footer__column-link">Концепция</a></li>
+              <li><a href="#" class="footer__column-link">Наставники</a></li>
+            </ul>
+          </nav>
+          <div class="footer__column footer__column_content_social">
+            <h4 class="footer__column-heading">Соцсети</h4>
+            <ul class="footer__column-links">
+              <li>
+                <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="instagram logo">YouTube</a>
+              </li>
+              <li>
+                <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="vk logo">ВКонтанте</a>
+              </li>
+              <li>
+                <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="facebook logo">TikTok</a>
+              </li>
+            </ul>
           </div>
-          <div class="table__cell table__cell_theme_white">
-            <div class="table__heading">1000 терабайт</div>
-            <div class="table__text table__text_theme_white">Объём памяти человека</div>
-          </div>
-          <div class="table__cell table__cell_theme_white">
-            <div class="table__heading">500 триллионов</div>
-            <div class="table__text table__text_theme_white">Число ответственных за обучение нервных синапсов у взрослого человека</div>
-          </div>
-          <div class="table__cell table__cell_theme_white">
-            <div class="table__heading">420 миллионов</div>
-            <div class="table__text table__text_theme_white">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</div>
-            <div class="table__text table__text_theme_white">Всемирный Банк, 2017</div>
-          </div>
-          <div class="table__cell table__cell_theme_white">
-            <div class="table__heading">17–20 лет</div>
-            <div class="table__text table__text_theme_white">Пик обучаемости</div>
-          </div>
-          <div class="table__cell table__cell_theme_white">
-            <div class="table__heading">1885 год</div>
-            <div class="table__text table__text_theme_white">Открытие кривой забывания</div>
-          </div>
-          <div class="table__cell table__cell_theme_white">
-            <div class="table__heading">1889 год</div>
-            <div class="table__text table__text_theme_white">Открытие условного рефлекса</div>
-          </div>
+
         </div>
-      </div>
-    </section>
+      </footer>
+
   </div>
 </body>
 </html>
