--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
             <h4 class="footer__column-heading">Соцсети</h4>
             <ul class="footer__column-links">
               <li>
-                <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="instagram logo">YouTube</a>
+                <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграмм лого">YouTube</a>
               </li>
               <li>
-                <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="vk logo">ВКонтанте</a>
+                <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте лого">ВКонтанте</a>
               </li>
               <li>
-                <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="facebook logo">TikTok</a>
+                <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук лого">TikTok</a>
               </li>
             </ul>
           </div>
