--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </header>
 
     <main>
-      <section class="description">
-        <div class="two-columns">
+      <section class="description" aria-label="две колонки">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
@@ -34,12 +34,12 @@
                 Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
               </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="digits">
-        <h2 class="section-title section-title_margin_100">Цифры и факты</h2>
-        <h3 class="section-subtitle section-subtitle_margin_20">Про учёбу и мозг</h3>
-        <ul class="table table_margin_100">
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <ul class="table">
           <li class="table__cell">
             <h4 class="table__heading">86 миллиардов</h4>
             <p class="table__text">Число нейронов в мозге человека</p>
@@ -78,13 +78,13 @@
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее &#8594;</a>
       </section>
       <section class="kaufman">
-        <h2 class="section-title section-title_theme_dark section-title_margin_90">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark section-subtitle_margin_20">от Джоша Кауфмана</h3>
-        <ul class="table table_theme_dark table_margin_90">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">1</h4>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
@@ -151,7 +151,7 @@
                 <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграмм лого">YouTube</a>
               </li>
               <li>
-                <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте лого">ВКонтанте</a>
+                <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте лого">ВКонтакте</a>
               </li>
               <li>
                 <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук лого">TikTok</a>
