--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img alt="Обложка книги" src="./images/khan-book.jpg" class="khan__book-pic"></img>
+            <img alt="Обложка книги" src="./images/khan-book.jpg" class="khan__book-pic">
             <a href="#" class="khan__buy-link">Купить книгу &#8594;</a>
           </div>
 
